<resources>
    <string name="app_name">PSType-v1</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="title_activity_welcome">welcome</string>
    <string name="section_format">Добро пожаловать в PSType</string>

    <string name="del">del</string>
    <string name="about">about</string>
    <string name="look">look</string>
    <string name="log_read">log_read</string>
    <string name="log_copy">log_copy</string>
    <string name="log_clear">log_clear</string>
    <string name="show_accel">show_accel</string>
    <string name="refresh">refresh</string>
    <string name="debug">Отладочные данные</string>

    <string name="item">Изменить</string>
    <string name="item_re">Обновить</string>
    <string name="tracks">История треков</string>
    <string name="no_history">История треков</string>

    <!-- general -->
    <string name="MAP">КАРТА</string>
    <string name="PSYCHO">ПРОФИЛЬ</string>
    <string name="STATISTICS">МОИ ПОЕЗДКИ</string>
    <string name="SETTINGS">НАСТРОЙКИ</string>
    <string name="empty"> </string>
    <string name="track_wait">Идёт загрузка трека</string>
    <string name="howFast">0 км/ч</string>

    <!-- profile -->
    <string name="pr_name">  </string>
    <string name="pr_age"> </string>
    <string name="pr_sex"> </string>
    <string name="pr_type"> </string>
    <string name="pr1">Возраст:</string>
    <string name="pr2">Пол:</string>
    <string name="pr3">Психотип:</string>
    <string name="pr4">Средняя скорость:</string>
    <string name="pr5">Максимальная скорость:</string>
    <string name="pr6">Пройденный путь:</string>
    <string name="pr10">Средний путь:</string>
    <string name="pr7">Максимальный путь:</string>
    <string name="pr8">Среднее время в пути:</string>
    <string name="pr9">Максимальное время в пути:</string>
    <string name="pr">---</string>
    <string name="pr11">Страна:</string>
    <string name="pr12">Город:</string>
    <string name="pr13">Стаж вождения:</string>
    <string name="pr111">Данные о пользователе</string>
    <string name="pr112">Статистика</string>

    <!-- profile change -->
    <string name="change">Редактирование</string>
    <string name="ok">Сохранить</string>
    <string name="cancel">Отмена</string>

    <!-- register -->
    <string name="name">Имя пользователя</string>
    <string name="age">Дата рождения</string>
    <string name="pass">Пароль</string>
    <string name="pass2">Подтверждение пароля</string>
    <string name="male">Мужчина</string>
    <string name="female">Женщина</string>
    <string name="not">Скрыть</string>
    <string name="drExp">Стаж вождения</string>
    <string name="ok_but">Подтвердить</string>
    <string name="country">Страна (необязательно)</string>
    <string name="city">Город (необязательно)</string>
    <string name="country2">Страна</string>
    <string name="city2">Город</string>
    <string name="att">Для завершения регистрации заполните данные</string>

    <!--Стаж вождения-->
    <string-array name="exp">
        <item>Отсутствует</item>
        <item>Менее 6 месяцев</item>
        <item>От 6 месяцев до 1 года</item>
        <item>1-3 года</item>
        <item>3-5 лет</item>
        <item>5-10 лет</item>
        <item>10-15 лет</item>
        <item>15-20 лет</item>
        <item>Более 20 лет</item>
    </string-array>

    <!-- sign -->
    <string name="enter">Войти</string>
    <string name="enter_vk">Войти через вк</string>
    <string name="question">У вас нет аккаунта?</string>
    <string name="register">Регистрация</string>

    <!-- welcome -->
    <string name="skip">Пропустить</string>
    <string name="start">Начать</string>
    <string name="description">PSType - приложение для определния психотипа водителя. </string>
    <string name="desc1">PSType - приложение для определения психотипа водителя.</string>
    <string name="desc2">PSType представляет полную статистику о поведении на дороге, анализирует полученные данные и выдаёт результат.</string>

    <!--url-->
    <string name="url_data">https://pstype.herokuapp.com/api/v1/data</string>
    <string name="url_signup">https://pstype.herokuapp.com/api/v1/signup</string>
    <string name="url_signin">https://pstype.herokuapp.com/api/v1/signin</string>
    <string name="url_vksignup">https://pstype.herokuapp.com/api/v1/vksignup</string>
    <string name="url_vksignin">https://pstype.herokuapp.com/api/v1/vksignin</string>
    <string name="url_pos">https://pstype.herokuapp.com/api/v1/map/pos</string>
    <string name="url_setAccel">https://pstype.herokuapp.com/api/v1/accel/set</string>
    <string name="url_startPos">https://pstype.herokuapp.com/api/v1/map/startPos</string>
    <string name="url_obr">https://pstype.herokuapp.com/api/v1/map/getLastData</string>
    <string name="url_getDate">https://pstype.herokuapp.com/api/v1/data/getDate</string>
    <string name="url_change">https://pstype.herokuapp.com/api/v1/data/change</string>
    <string name="url_getPoints">https://pstype.herokuapp.com/api/v1/data/getPoints</string>
</resources>
