<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="Настройки">
    <PreferenceCategory
        android:title="Основное">
    <SwitchPreference
        android:key="@string/look"
        android:summaryOff="Включить отслеживание"
        android:summaryOn="Выключить отслеживание"
        android:switchTextOff=" "
        android:switchTextOn=" " />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="screenOn"
            android:title="Оставлять экран включённым"
            android:summary="При отслеживании маршрута на карте, экран всегда будет во включённом состоянии"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="accelOn"
            android:title="Включить акселерометр"
            android:summary="Требует зафиксированного положения во время поездки (только при запуске с карты)"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Отладка">
        <EditTextPreference
            android:key="@string/refresh"
            android:title="Граничное Z"
            android:enabled="true"
            android:summary="Устанавливает отклонение по оси Z, которое будет считаться опасным (изменения устанавливаются до начала поездки)"
            android:defaultValue="2"
            android:dialogTitle="Введите отклонение (целое)" />

        <Preference android:title="Очистить записи"
            android:key="@string/del">
           </Preference>
        <Preference android:title="Открыть текстовый лог"
            android:key="@string/log_read">
        </Preference>
        <Preference android:title="Копировать текстовый лог"
            android:key="@string/log_copy">
        </Preference>
        <Preference android:title="Очистить тектовый лог"
            android:key="@string/log_clear">
        </Preference>
        <Preference android:title="Открыть акселерометр"
            android:key="@string/show_accel">
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Справка">
        <Preference android:title="О программе"
            android:key="@string/about">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>